--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
@@ -36,3 +36,297 @@
     transform: rotate(360deg);
   }
 }
+
+body
+{
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	background-color: whitesmoke;	
+}
+
+nav
+{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 90px;
+	padding: 10px 100px;
+	background-color: rgb(248, 221, 70);
+	box-sizing: border-box;
+	transition: .5s;
+	z-index: 999;
+}
+
+.logo1, .logo2
+{
+	width: 80px;
+	height: 80px;
+	display: inline-block;
+	vertical-align: top;
+	/* background-color: red; */
+
+}
+
+.logo2 h3
+{
+	font-weight: bold;
+	color: black;
+	margin-top: 20px;
+}
+
+nav.black .logo2 h3
+{
+	color: whitesmoke;
+}
+
+.logo
+{
+	float: left;
+	 
+}
+
+
+
+nav .logo img
+{
+	height: 80px;
+	transition: .5s;
+}
+
+nav.black
+{
+	/*background: rgba(0,0,0,.9);*/
+	background-color: #7F7F7F;
+	height: 65px;
+	padding: 0px 50px;
+	z-index: 999;
+}
+
+nav.black .logo img
+{
+	height: 60px;
+}
+
+nav ul
+{
+	float: right;
+	margin: 0;
+	padding: 0;
+	display: flex;
+}
+
+nav ul li
+{
+	list-style: none;
+
+}
+
+nav ul li a
+{
+	line-height: 80px;
+	color: #000;
+	padding: 5px 20px;
+	text-decoration: none;
+	font-weight: bold;
+	
+}
+
+nav ul li a:hover 
+{
+	text-decoration: none;
+	color: #7F7F7F;
+	line-height: 80px;
+	font-weight: bold;
+	text-transform: uppercase;
+	padding: 5px 15px;
+	margin-left: 0px;
+	transition: none;
+	animation: none;
+	border-bottom: 3px solid  #7F7F7F;
+}
+
+.sec1
+{
+	margin-top: 10%;
+	margin-left: 35%;
+	margin-right: 35%;
+	width: 30%;
+	height: auto;
+	background-color: rgb(253, 244, 194);
+	background-size: cover;
+	box-shadow: 10px 5px 10px rgba(128, 126, 126, 0.76) ;
+	/* position: relative;
+	height: 75vh;
+		margin-top: -20px; */
+	/********
+		background: url(../image/7.png);
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
+		clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
+	********/
+}
+
+.style-btn
+{
+	background-color: goldenrod;
+}
+
+
+.style-div
+{
+	position: relative;
+	vertical-align: middle;
+	display: inline-block;
+	width: 90%;
+	height: auto;
+	margin-left: 5%;
+	margin-top: 5%;
+	margin-right: 5%;
+	/*background-color: cadetblue;*/
+}
+
+.style-input
+{
+	height: calc(1.5em + 0.75rem + 2px);
+}
+
+
+.style-input:focus
+{
+	box-shadow: 0 0 0 0.2rem rgba(233,84,32,0.25);
+	/*border-color: #f4ad94;*/
+	border-color: goldenrod;
+}
+
+.ajout, .input-ajout
+{
+	display: inline-block;
+	vertical-align: top;
+	
+	/*background-color: coral;*/
+
+}
+
+.input-ajout, .input-ajout2
+{
+	width: 70%;
+}
+
+.ajout, .ajout2
+{
+	width: 25%;
+}
+
+.ajout button
+{
+	height: calc(1.5em + 0.75rem + 2px);
+}
+
+.ajout2, .input-ajout2
+{
+	display: inline-block;
+	vertical-align: top;
+}
+
+.stylee
+{
+	padding: 0.375rem 0.75rem;
+}
+
+/****************/
+.sect1-content
+{
+	position: absolute;
+	width: 73%;
+	height: 180px;
+	margin: 15%;
+	text-align: center;
+	color: #fff;
+	background-color: rgba(0,0,0,.3);
+	
+}
+/****************/
+
+.content
+{
+	padding: 100px;
+}
+
+.content h1
+{
+	margin: 0;
+	padding: 0;
+	font-size: 2em;
+	/*color: #f70;*/
+	color: gold;
+	text-align: center;
+}
+
+.separation
+{
+	width: 10%;
+	height: 3px;
+	border: none;
+	box-shadow: none;
+	background-color: gold;
+}
+
+.content h2
+{
+	margin: 0;
+	padding: 0;
+	font-size: 1.5em;
+	color: gold;
+}
+
+.content p
+{
+	margin: 20px 0 0;
+	padding: 0;
+	font-size: 1em;
+}
+
+.content p:first-of-type::first-letter
+{
+	font-size: 30px;
+	font-weight: bold;
+}
+
+.about-container
+{
+	margin-top: 10%;
+	margin-left: 10%;
+	width: 80%;
+	height: 65vh;
+	background-color: rgb(253, 244, 194);
+	background-size: cover;
+	box-shadow: 10px 5px 10px rgba(128, 126, 126, 0.76) ;
+	text-align: center;
+}
+
+.about-container div
+{
+	padding-top: 15%;
+}
+
+footer
+{
+	width: 100%;
+	height: 50px;
+	background-color: rgb(248, 221, 70);
+	padding: 10px 100px;
+}
+
+footer p
+{
+	margin: 10px 0 0;
+	padding: 0;
+	font-size: .8em;
+	color: black;
+	text-align: center;
+}
+
+/******** **************/
+
+
